--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -120,6 +120,215 @@ li {
   color: var(--green-color);
 }
 
+/* todo =================== COMMON-CLASS ===================== */
+
+.heading-title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.heading-title h1 {
+  font-size: 40px;
+  font-weight: 700;
+  position: relative;
+  margin: 0;
+}
+
+.heading-title h1::after {
+  content: "";
+  position: absolute;
+  left: 115%;
+  top: 25px;
+  width: 600px;
+  height: 2px;
+  background-color: var(--gray-40);
+}
+
+.arrow {
+  display: flex;
+  gap: 15px;
+  align-items: center;
+}
+
+.arrow .prev-btn,
+.arrow .next-btn {
+  height: 45px;
+  width: 45px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 45px;
+  border: 1px solid var(--text-gray);
+  cursor: pointer;
+  font-size: 32px;
+}
+
+.arrow .prev-btn:hover,
+.arrow .next-btn:hover {
+  background-color: #eee;
+}
+
+.heading-title .right-details {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.heading-title .right-details .allProduct-btn {
+  padding: 10px 20px;
+  background-color: var(--white-100);
+  border: 1px solid var(--text-gray);
+  border-radius: 50px;
+  text-transform: uppercase;
+  color: var(--black-100);
+  transition: 0.2s ease;
+  text-decoration: none;
+}
+
+.heading-title .right-details .allProduct-btn a {
+  color: var(--black-100);
+  text-decoration: none;
+  transition: 0.2s ease;
+}
+
+.heading-title .right-details .allProduct-btn:hover {
+  background-color: var(--green-color);
+  border-color: var(--green-color);
+  color: var(--white-100);
+  transition: 0.2s ease;
+}
+
+.heading-title .right-details .allProduct-btn:hover a {
+  color: var(--white-100);
+  transition: 0.2s ease;
+}
+
+.best-sellers-section .heading-title h1::after {
+  width: 500px;
+}
+
+@media screen and (max-width: 1440px) {
+  .heading-title h1::after {
+    width: 500px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .heading-title h1::after {
+    width: 350px;
+  }
+
+  .best-sellers-section .heading-title h1::after {
+    width: 280px;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .heading-title h1 {
+    font-size: 30px;
+  }
+
+  .heading-title h1::after {
+    width: 120px;
+  }
+
+  .best-sellers-section .heading-title h1::after {
+    width: 120px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .heading-title h1 {
+    font-size: 19px;
+  }
+
+  .heading-title h1::after {
+    top: 10px;
+    width: 180px;
+    left: 110%;
+  }
+
+  .best-sellers-section .heading-title h1::after {
+    width: 120px;
+  }
+
+  .heading-title .right-details .allProduct-btn {
+    padding: 8px 16px;
+    font-size: 11px;
+  }
+
+  .arrow .prev-btn,
+  .arrow .next-btn {
+    height: 35px;
+    width: 35px;
+    line-height: 35px;
+    font-size: 26px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .heading-title h1 {
+    font-size: 17px;
+  }
+
+  .heading-title h1::after {
+    width: 160px;
+  }
+
+  .best-sellers-section .heading-title h1::after {
+    width: 145px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .arrow {
+    display: none;
+  }
+
+  .heading-title h1::after {
+    width: 160px;
+  }
+
+  .best-sellers-section .heading-title h1::after {
+    width: 145px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .heading-title h1::after {
+    width: 130px;
+  }
+
+  .best-sellers-section .heading-title h1::after {
+    width: 125px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .best-sellers-section .heading-title h1::after {
+    width: 110px;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .heading-title h1::after {
+    width: 110px;
+  }
+
+  .best-sellers-section .heading-title h1::after {
+    width: 90px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .heading-title h1::after {
+    width: 100px;
+  }
+
+  .best-sellers-section .heading-title h1::after {
+    width: 85px;
+  }
+}
 
 @media screen and (min-width: 1240px) {
   .container,
