--- a/src/styles/components/dropdown.css
+++ b/src/styles/components/dropdown.css
@@ -6,7 +6,7 @@
 }
 
 .dropdown-header {
-  background: var(white);
+  background: var(--white);
   padding: 8px 12px;
   border: 1px solid var(--gray-40);
   border-radius: 6px;
@@ -35,5 +35,13 @@
 }
 
 .dropdown-list li:hover {
-  background-color: #f0f0f0;
+  background-color: var(--gray-40);
+}
+
+.dropdown-arrow {
+  transition: transform 0.3s ease;
+}
+
+.dropdown-arrow.rotate {
+  transform: rotate(180deg);
 }
