--- a/src/styles/pages/productpage.css
+++ b/src/styles/pages/productpage.css
@@ -975,10 +975,18 @@
 
 /*! ~~~~~~~~~~~~~~  PRODUCT-PAGE-EGIFT ~~~~~~~~~~~~~~~~ */
 
+.egift-details {
+  margin-top: 10px;
+}
+
 .egift-details h5 {
   color: var(--green-color);
   padding-bottom: 8px;
   border-bottom: 2px solid var(--gray-40);
+}
+
+.egift-details .instruction {
+  display: none;
 }
 
 .egift-details .egift-type button {
@@ -1039,6 +1047,7 @@
   font-size: 16px;
   color: var(--black-100);
   border-radius: 6px;
+  height: 40px;
 }
 
 .egift-details .egift-card-details .dts-rt textarea {
@@ -1081,7 +1090,7 @@
   transition: 0.2s ease;
 }
 
-.egift-details .egift-card-details .amount input {
+.egift-details .egift-card-details input {
   width: 100%;
   height: 30px;
   outline: none;
@@ -1137,7 +1146,7 @@
   padding: 50px;
   height: 400px;
   width: 100%;
-  background-image: url("../assets/canvas.jpg");
+  background-image: url("../images/canvas.webp");
   background-size: cover;
   background-repeat: no-repeat;
   text-align: center;
