--- a/src/styles/pages/shoppage.css
+++ b/src/styles/pages/shoppage.css
@@ -1,4 +1,3 @@
-
 /* ! ~~~~~~~~~~~~~~~~~~~ SUBSCRIPTION SHOP PAGE ~~~~~~~~~~~~~~~~~~ */
 
 .shopPage header {
@@ -193,7 +192,7 @@
 
 /* ?  PRODUCT COLOR OPTION */
 
-.product-item .product-color {
+.product-color {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: auto 3px auto 3px auto 3px auto 3px auto 3px auto;
@@ -204,7 +203,7 @@
   gap: 3px;
 }
 
-.product-item .product-color .color-it {
+.product-color .color-it {
   height: 25px;
   width: 25px;
   border-radius: 50%;
@@ -224,7 +223,7 @@
   cursor: pointer;
 }
 
-.product-item .product-color .moreColor {
+.product-color .moreColor {
   height: 25px;
   width: 25px;
   cursor: pointer;
@@ -242,46 +241,22 @@
   color: var(--green-color);
 }
 
-.product-item .product-color .color-it:nth-child(1) {
-  background-color: #d5ccc3;
-}
-
-.product-item .product-color .color-it:nth-child(2) {
-  background-color: #d3ae90;
-}
-
-.product-item .product-color .color-it:nth-child(3) {
-  background-color: #c0865d;
-}
-
-.product-item .product-color .color-it:nth-child(4) {
-  background-color: #88705e;
-}
-
-.product-item .product-color .color-it:nth-child(5) {
-  background-color: #594d43;
-}
-
-.product-item .product-color .color-it:nth-child(5) {
-  background-color: #88705e;
-}
-
-.product-item .product-color .color-it:nth-child(6) {
-  background-color: #594d43;
-}
-
-.product-item .product-color .color-it:nth-child(7) {
-  background-color: #88705e;
-}
-
-.product-item .product-color .color-it:nth-child(8) {
-  background-color: #594d43;
-}
-
-.color-picker{
+.color-picker {
   position: relative;
 }
 
+.color-selection .product-color{
+  justify-content: flex-start;
+  margin-top: 12px;
+  gap: 5px;
+
+}
+
+.color-selection .product-color .color-it {
+  height: 30px;
+  width: 30px;
+
+}
 
 .all-colorPlate {
   position: absolute;
@@ -342,43 +317,6 @@
   padding: 30px 10px;
   padding-top: 50px;
 }
-
-.all-colorPlate .product-color .color-it:nth-child(1) {
-  background-color: #d3ae90;
-}
-
-.all-colorPlate .product-color .color-it:nth-child(2) {
-  background-color: #d3ae90;
-}
-
-.all-colorPlate .product-color .color-it:nth-child(3) {
-  background-color: #c0865d;
-}
-
-.all-colorPlate .product-color .color-it:nth-child(4) {
-  background-color: #88705e;
-}
-
-.all-colorPlate .product-color .color-it:nth-child(5) {
-  background-color: #594d43;
-}
-
-.all-colorPlate .product-color .color-it:nth-child(5) {
-  background-color: #88705e;
-}
-
-.all-colorPlate .product-color .color-it:nth-child(6) {
-  background-color: #594d43;
-}
-
-.all-colorPlate .product-color .color-it:nth-child(7) {
-  background-color: #88705e;
-}
-
-.all-colorPlate .product-color .color-it:nth-child(8) {
-  background-color: #594d43;
-}
-
 
 .quantity .remove,
 .quantity .add {
@@ -1075,7 +1013,7 @@
 
 @media screen and (max-width: 450px) {
   .product-items.activeListView .product-color {
-    -ms-grid-columns: (auto) ;
+    -ms-grid-columns: (auto);
     grid-template-columns: repeat(6, auto);
   }
 
