--- a/src/styles/components/dropdown.css
+++ b/src/styles/components/dropdown.css
@@ -18,7 +18,7 @@
 
 .dropdown-list {
   position: absolute;
-  z-index: 10;
+  z-index: 999;
   width: 100%;
   background:var(--bg-gray);
   border: 1px solid #ccc;
@@ -26,6 +26,8 @@
   padding: 0;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  overflow-y: auto;
+  max-height: 150px;
 }
 
 .dropdown-list li {
@@ -35,7 +37,7 @@
 }
 
 .dropdown-list li:hover {
-  background-color: var(--gray-40);
+  background-color: #dfdfdf;
 }
 
 .dropdown-arrow {
@@ -51,3 +53,5 @@
   border: 1px solid var(--green-color);
   border-radius: 50%;
 }
+
+
