--- a/src/styles/slider/slider.css
+++ b/src/styles/slider/slider.css
@@ -26,13 +26,6 @@
   padding: 20px 0px;
 }
 
-.product-item {
-  border-radius: 4px;
-  border: 1px solid transparent;
-  width: 100%;
-  max-width: 300px;
-  min-width: 200px;
-}
 
 .slick-slide {
   display: flex;
@@ -49,6 +42,16 @@
   display: none;
 }
 
+.product-item {
+  border-radius: 6px;
+  border: 1px solid transparent;
+  width: 100%;
+  max-width: 300px;
+  min-width: 200px;
+  transition: 0.3s ease;
+}
+
+
 .product-item .product-header {
   position: relative;
   text-align: center;
@@ -59,22 +62,10 @@
 
 /* ! ~~~~~~~~~ PRODUCT_PAGE ~~ ~~~~~~ */
 
-.product_page .product-item {
-  border-radius: 4px;
-  border: 1px solid transparent;
-  align-items: stretch;
-  width: 100%;
-  height: 100%;
-  max-height: 430px;
-}
-
 .slick-slide > div {
   height: 100% !important;
 }
 
-.product_page .product-item .product-header {
-  height: 43%;
-}
 
 /* Benefits Section */
 
@@ -115,7 +106,6 @@
   .product_page .product-item {
     border-radius: 4px;
     border: 1px solid transparent;
-    min-height: 400px;
   }
 
   .product_page .product-item .product-details {
@@ -332,13 +322,5 @@
   .benefits-section .product-item .product-name {
     font-size: 16px;
     margin-bottom: 5px;
-  }
-}
-
-@media screen and (max-width: 450px) {
-  .product_page .product-item {
-    border-radius: 4px;
-    border: 1px solid transparent;
-    height: 350px !important;
   }
 }
