--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -47,9 +47,9 @@ body {
 }
 
 .checked {
-  background-color: var(--green-color);
+  background-color: var(--green-color) !important;
   transition: 0.2s ease;
-  outline-color: var(--green-color);
+  outline-color: var(--green-color) !important;
 }
 
 .custom-checkbox label {
@@ -59,58 +59,22 @@ body {
   width: calc(100% - 20px);
 }
 
+.custom-checkbox label.alert-label {
+  color: #b12c39;
+}
+
 .hidden-checkbox {
   position: absolute;
   opacity: 0;
   pointer-events: none;
   width: 0;
   height: 0;
-}
+  left: 0;
 
-/* Optional styling */
-.form-group {
-  margin-bottom: 15px;
-}
-
-.form-group {
-  margin-bottom: 15px;
-}
-
-.form-row {
-  display: flex;
-  gap: 15px;
-}
-
-.form-control {
-  width: 100%;
-  padding: 8px 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-
-.input-label {
-  display: block;
-  margin-bottom: 5px;
-  font-weight: bold;
-}
-
-.alert-input {
-  border-color: crimson !important;
-  background-color: #fff0f0;
-}
-
-.alert-label {
-  color: crimson !important;
-}
-
-.form-actions {
-  margin-top: 20px;
-  display: flex;
-  justify-content: space-between;
 }
 
 .form-group input {
-  height: 40px !important;
+  height: 45px !important;
   width: 100%;
   border: 1px solid var(--gray-40) !important;
   border-radius: 6px !important;
@@ -121,7 +85,7 @@ body {
   box-shadow: none !important;
 }
 
-.flatpickr-day.selected{
+.flatpickr-day.selected {
   background-color: var(--green-color) !important;
 }
 
@@ -145,7 +109,7 @@ body {
 @keyframes fadeUp {
   0% {
     opacity: 0;
-    transform: translateX(5px);
+    transform: translateY(5px);
   }
 }
 
@@ -158,6 +122,7 @@ body {
 .subtotal-card .sb-tl {
   font-weight: 600;
 }
+
 .subtotal-card .close-subtotal {
   cursor: pointer;
   font-size: 24px;
@@ -398,6 +363,10 @@ li {
   width: 80px;
 }
 
+.slick-list {
+  padding-bottom: 60px !important;
+}
+
 /* ! RESPONSIVE */
 
 @media screen and (max-width: 1440px) {
@@ -442,9 +411,13 @@ li {
 }
 
 @media screen and (max-width: 768px) {
-  .subtotal-card {
-    padding: 8px 10px;
-    font-size: 12px;
+  .subtotal-card .product-name {
+    display: none;
+  }
+
+  .subtotal-card{
+    font-size: 14px;
+    padding: 6px 12px;
   }
 
   .heading-title h1 {
@@ -535,9 +508,7 @@ li {
     width: 145px;
   }
 
-  .subtotal-card {
-    font-size: 10px;
-  }
+
 }
 
 @media screen and (max-width: 420px) {
@@ -584,3 +555,5 @@ li {
     margin: 0 auto;
   }
 }
+
+
