--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,11 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Poppins", serif;
+  font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
   scrollbar-width: thin;
   -webkit-tap-highlight-color: transparent;
@@ -70,7 +68,6 @@ body {
   width: 0;
   height: 0;
   left: 0;
-
 }
 
 .form-group input {
@@ -134,8 +131,8 @@ body {
   color: var(--green-color);
 }
 
-.fixed-subtotal{
-   position: fixed;
+.fixed-subtotal {
+  position: fixed;
   top: 70px;
   right: 20px;
   background: var(--black-100);
@@ -149,7 +146,6 @@ body {
   transition: 0.3s ease;
   color: var(--white-100);
   animation: fadeUp 0.3s ease;
-
 }
 
 .green-btn {
@@ -433,7 +429,7 @@ li {
     display: none;
   }
 
-  .subtotal-card{
+  .subtotal-card {
     font-size: 14px;
     padding: 6px 12px;
   }
@@ -525,8 +521,6 @@ li {
   .best-sellers-section .heading-title h1::after {
     width: 145px;
   }
-
-
 }
 
 @media screen and (max-width: 420px) {
@@ -573,5 +567,3 @@ li {
     margin: 0 auto;
   }
 }
-
-
