--- a/src/styles/components/modal.css
+++ b/src/styles/components/modal.css
@@ -6,7 +6,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.4);
-  z-index: 999;
+  z-index: 999999;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,6 +20,8 @@
   max-width: 700px;
   position: relative;
   animation: fade-in 0.2s ease forwards;
+  z-index: 99999999;
+  position: relative;
 }
 
 .modal-small {
@@ -29,17 +31,24 @@
 
 .medium-modal {
   width: 550px;
+  max-width: 500px;
   padding: 40px 30px;
 }
 
 .large-modal {
   width: 800px;
+  max-width: 800px;
 }
 
 .fullscreen-modal {
   width: 100vw;
   height: 100vh;
   border-radius: 0;
+}
+
+.modal-scrollable{
+  max-height: 500px;
+  overflow-y: auto;
 }
 
 /* Animations */
@@ -89,6 +98,7 @@
   color: var(--gray-100);
   z-index: 66;
 }
+
 
 @media screen and (max-width: 768px) {
   .custom-modal {
