--- a/src/styles/enhancement.css
+++ b/src/styles/enhancement.css
@@ -789,7 +789,7 @@
 .resource-center .e-wallet-login .container {
   min-height: 600px;
   width: 100%;
-  background-image: url("../assets/Media\ Center.png");
+  background-image: url("images/media-center.webp");
   background-repeat: no-repeat;
   background-size: cover;
   padding: 50px;
