--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -22,19 +22,19 @@
 }
 
 .card-section .cards-grid .card-item:nth-child(1) {
-  background-image: url(../assets/1.png);
+  background-image: url(/images/1.webp);
 }
 
 .card-section .cards-grid .card-item:nth-child(2) {
-  background-image: url(../assets/2.png);
+  background-image: url(/images/2.webp);
 }
 
 .card-section .cards-grid .card-item:nth-child(3) {
-  background-image: url(../assets/3.png);
+  background-image: url(/images/3.webp);
 }
 
 .card-section .cards-grid .card-item:nth-child(4) {
-  background-image: url(../assets/4.png);
+  background-image: url(/images/4.webp);
 }
 
 .card-section .cards-grid .card-item h5 {
@@ -655,15 +655,18 @@
     rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
   box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
     rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
-  right: -50px;
-  top: -110px;
-  -webkit-transition: 0.3s ease;
-  -o-transition: 0.3s ease;
-  transition: 0.3s ease;
-  display: none;
   padding: 5px 0px;
+  animation: openAnime 0.3s ease;
+  margin-top: 5px;
 }
 
+@keyframes openAnime {
+  0% {
+    opacity: 0;
+  }
+}
+
+/* 
 .export::after {
   content: "";
   height: 20px;
@@ -676,7 +679,7 @@
   -webkit-transform: rotate(180deg);
   -ms-transform: rotate(180deg);
   transform: rotate(180deg);
-}
+} */
 
 .export li {
   padding: 2px 15px;
@@ -686,11 +689,9 @@
   transition: 0.3s ease;
 }
 
-/* .export li:hover {
-  background-color: var(--green-color);
-  color: var(--white-100);
- 
-} */
+.export li:hover {
+  background-color: var(--gray-f3);
+}
 
 .export li.activeExport {
   background-color: var(--green-color);
@@ -1034,11 +1035,11 @@
   font-weight: 600;
 }
 
-.multiple-volume .range-circle {
+/* .multiple-volume .range-circle {
   height: 170px;
   width: 170px;
   border-radius: 50%;
-  border: 15px solid var(--green-color);
+  border: 15px solid var(--gray-40);
   margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1049,6 +1050,17 @@
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+}
+ */
+
+.multiple-volume .range-circle {
+  position: relative;
+  width: 100%;
+}
+
+.multiple-volume .range-circle svg {
+  height: 180px;
+  width: 180px;
 }
 
 .multiple-volume .range-circle .content {
@@ -1064,6 +1076,10 @@
   align-items: center;
   font-size: 20px;
   color: var(--text-gray);
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .multiple-volume .range-circle .content p {
@@ -1232,21 +1248,21 @@
   border: 1px solid var(--gray-40);
 }
 
-.all-ppv {
+.ppv-wrapper {
   background-color: var(--gray-f3);
   padding: 10px;
   display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 10px 1fr 10px 1fr 10px 1fr;
+  display: grid !important;
   grid-template-columns: repeat(4, 1fr);
   gap: 10px;
   border-radius: 10px;
 }
 
-.all-ppv .ppv-itm {
+.ppv-wrapper .ppv-itm {
   padding: 5px 12px;
   border: 1px solid var(--gray-40);
   border-radius: 8px;
+  width: 100%;
 }
 
 .ppv-itm .header {
@@ -1278,7 +1294,7 @@
   cursor: pointer;
 }
 
-.disableItem {
+.ppv-wrapper .ppv-itm .disableItem {
   opacity: 0.5;
   pointer-events: none;
 }
@@ -1309,6 +1325,16 @@
   appearance: none;
   position: relative;
   z-index: 66;
+}
+
+.ppv-itm .application-date {
+  width: 100%;
+  padding: 5px 6px;
+  border-radius: 4px;
+  border: 1px solid var(--gray-40);
+  font-size: 14px;
+  margin-top: 5px;
+  outline: none;
 }
 
 .ppv-itm .input-wrapper span {
@@ -1416,7 +1442,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   padding-bottom: 20px;
 }
 
-.pvModal .modal-body p {
+.pvModal .desc {
   margin: 0;
   font-size: 18px;
   color: var(--gray-100);
@@ -1435,7 +1461,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 /* Hide the dropdown by default */
 .period .period-list-items {
-  display: none;
   list-style: none;
   background: #fff;
   border: 1px solid #ccc;
@@ -1717,7 +1742,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 @media screen and (max-width: 1200px) {
-  .all-ppv {
+  .ppv-wrapper {
     grid-template-columns: repeat(3, 1fr);
   }
 
@@ -1732,12 +1757,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     right: 20px;
   }
 
-  .multiple-volume .range-circle {
-    height: 150px;
-    width: 150px;
-    border-width: 13px;
-  }
-
   .multiple-volume .range-circle .content .value {
     font-size: 20px;
   }
@@ -1748,8 +1767,17 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     padding-left: 0px;
   }
 
-  .all-ppv {
+  .ppv-wrapper {
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  .multiple-volume .range-circle svg {
+    height: 160px;
+    width: 160px;
+  }
+
+  .multiple-volume .range-circle svg circle {
+    stroke-width: 10px;
   }
 }
 
@@ -1779,7 +1807,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     font-size: 14px;
   }
 
-  .all-ppv {
+  .ppv-wrapper {
     grid-template-columns: repeat(1, 1fr);
   }
 }
@@ -1929,7 +1957,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     padding-bottom: 20px;
   }
 
-  .pvModal .modal-body p {
+  .pvModal .desc {
     margin: 0;
     font-size: 14px;
   }
@@ -2179,7 +2207,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   display: grid;
   -ms-grid-columns: auto 15px auto 15px auto 15px auto;
   grid-template-columns: repeat(4, auto);
-  gap: 15px 15px;
+  gap: 15px 10px;
 }
 
 .grid-btn button {
@@ -2256,7 +2284,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   border-radius: 5px;
   -webkit-box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  display: none;
 }
 
 .num-sublist.show {
@@ -2738,6 +2765,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   background-color: var(--white-100);
   color: var(--gray-100);
   padding: 10px;
+  min-width: 100%;
 }
 
 #teamManagerList .search-wrapper .icon {
@@ -3022,7 +3050,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   max-height: 600px;
 }
 
-.selectModal{
+.selectModal {
   width: 300px;
   overflow: hidden;
 }
@@ -3253,7 +3281,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   display: block;
 }
 
-
 .dropdown-list .option {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3451,20 +3478,16 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     -webkit-transform 0.35s ease;
 }
 
-
-.flt-itm.dragging{
+.flt-itm.dragging {
   background-color: var(--gray-f3);
   opacity: 0.7;
 }
-
-
 
 .flt-itm.deleted {
   opacity: 0;
   transform: translateX(20px);
   transition: all 0.2s ease;
 }
-
 
 .selected-filter .icon-sec {
   font-size: 24px;
@@ -3580,8 +3603,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
   /* ? filter Modal */
 
-  .filterModal{
-
+  .filterModal {
     overflow-y: auto;
     max-height: 450px;
   }
@@ -3795,9 +3817,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   background-color: var(--gray-f3);
   color: var(--gray-100);
   font-size: 18px;
-}
-
-.dataTable tr:nth-child(odd) {
 }
 
 /* ? dataTableHistory */
@@ -4632,14 +4651,17 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 @media screen and (max-width: 576px) {
-  .sub-navigation {
-  }
   .sub-navigation .date-pick {
     width: 100%;
+    flex-direction: column;
   }
 
   .sub-navigation .date-pick span {
     font-size: 12px;
+  }
+
+  .sub-navigation .date-pick .btn-sec {
+    align-self: flex-start !important;
   }
 
   .navigater-menu {
@@ -4693,7 +4715,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .tip-cards .tip-card-itm {
   border: 1px solid var(--gray-40);
   padding: 15px;
-  background-image: url("../assets/tip-card.png");
+  background-image: url("images/tip-card.webp");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -4874,13 +4896,14 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   transition: 0.3s ease;
 }
 
-.share-details .all-cart-items .subtotal {
-}
+
 
 .share-details .all-cart-items {
   position: relative;
   margin-bottom: 60px;
   border: none;
+  max-height: 500px;
+  overflow-y: auto;
 }
 
 .all-cart-items .cart-item:first-child {
@@ -4989,10 +5012,15 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .setting-description {
   padding-left: 20px;
+  animation: fadeUp 0.3s ease;
+
 }
 
-.setting-description .setting-desc-itm {
-  display: none;
+@keyframes fadeUp {
+  0%{
+    opacity: 0;
+    transform: translateY(10px);
+  }
 }
 
 .setting-description .buisness-center .select-box {
@@ -5082,8 +5110,14 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   width: 70%;
 }
 
-.contact-info .intl-tel-input {
+.contact-info .lb-in{
   width: 70%;
+}
+
+.contact-info .react-tel-input {
+  width: 100%;
+  max-width: 100%;
+
 }
 
 .contact-info .intl-tel-input input {
@@ -5098,6 +5132,13 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   cursor: pointer;
   margin-top: 5px;
   border-radius: 6px;
+}
+.top-picks .savelistCircle{
+  display: none;
+}
+
+.top-picks .qnt{
+  display: none;
 }
 
 .all-cart-items.gridActiveView {
@@ -5332,9 +5373,6 @@ input.alertInput {
   }
 }
 
-.add-products {
-  display: none;
-}
 
 #timeline .timeline-post .reaction-count .left .reaction-img:nth-child(4),
 #timeline .timeline-post .reaction-count .left .reaction-img:nth-child(5) {
@@ -5343,13 +5381,32 @@ input.alertInput {
 
 /* ? Upload Image Modal */
 
+
+
 .uploadFile .modal-dialog {
   max-width: 550px;
+  width: 550px;
 }
 
 .uploadFile .modal-body p {
   font-size: 14px;
   color: var(--gray-100);
+}
+
+.uploadFile .modal-content{
+  width: 500px;
+}
+
+.css-r64h58-MuiSlider-rail{
+  background-color: var(--gray-100) !important;
+}
+
+.css-13vpke-MuiSlider-root{
+  color: var(--green-color) !important;
+}
+
+.css-1xcmt9q-MuiSlider-thumb{
+  background-color: var(--green-color) !important;
 }
 
 .upload-container {
@@ -5436,6 +5493,7 @@ input.alertInput {
   padding: 5px 15px;
   border: 1px solid var(--gray-60);
   border-radius: 40px;
+  height: 50px;
 }
 
 .search-product .input-wrapper input {
@@ -5672,9 +5730,32 @@ input.alertInput {
   -webkit-box-shadow: none;
   box-shadow: none;
   border-radius: 20px;
+  overflow: hidden;
 }
 
-.statement-calendar .flatpickr-rContainer {
+.statement-calendar .flatpickr-current-month input.cur-year {
+  color: var(--black-100);
+}
+
+.statement-calendar .numInputWrapper span {
+  opacity: 1;
+}
+
+.statement-calendar .flatpickr-current-month .numInputWrapper span.arrowUp:after{
+  border-bottom-color: var(--black-100) ;
+
+}
+
+.statement-calendar .flatpickr-current-month .numInputWrapper span.arrowDown:after{
+  border-top-color: var(--black-100) ;
+
+}
+
+.flatpickr-current-month
+  .numInputWrapper
+  span.arrowUp:after
+  .statement-calendar
+  .flatpickr-rContainer {
   width: 100%;
 }
 
@@ -5682,6 +5763,7 @@ input.alertInput {
   height: 50px;
   line-height: 50px;
   padding-top: 10px;
+  background-color: var(--white-100);
 }
 
 .statement-calendar .flatpickr-months .flatpickr-prev-month,
@@ -5693,10 +5775,21 @@ input.alertInput {
 
 .statement-calendar .flatpickr-weekdays {
   height: 70px;
+  background-color: var(--white-100);
+}
+
+.statement-calendar span.flatpickr-weekday {
+  background-color: var(--white-100);
+}
+
+.statement-calendar .flatpickr-current-month .flatpickr-monthDropdown-months {
+  background-color: transparent;
+  color: var(--black-100);
 }
 
 .statement-calendar .flatpickr-days {
   width: 100%;
+  background-color: var(--white-100);
 }
 
 .statement-calendar .dayContainer {
@@ -7035,6 +7128,11 @@ td {
   /* For Website Setting Page */
   .all-cart-items.gridActiveView {
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  .tip-cards .tip-card-itm {
+    height: auto;
+    min-height: 200px;
   }
 
   /* ? Contact- Information */
