--- a/src/styles/pages/shoppage.css
+++ b/src/styles/pages/shoppage.css
@@ -1,4 +1,3 @@
-/* ! ~~~~~~~~~~~~~~~~~~~ SUBSCRIPTION SHOP PAGE ~~~~~~~~~~~~~~~~~~ */
 
 .shopPage header {
   background-color: var(--bg-gray);
@@ -247,7 +246,9 @@
 }
 
 .color-selection .product-color {
-  justify-content: flex-start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   margin-top: 12px;
   gap: 5px;
 }
@@ -260,19 +261,26 @@
 .all-colorPlate {
   position: absolute;
   min-height: 60px;
+  min-width: -webkit-fit-content;
+  min-width: -moz-fit-content;
   min-width: fit-content;
   top: 0;
   background-color: var(--white-100);
   left: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-transform: translate(-50%, 0%);
   -ms-transform: translate(-50%, 0%);
   transform: translate(-50%, 0%);
   padding: 12px 16px;
   padding-top: 25px;
   -ms-flex-pack: center;
-  justify-content: center;
+  -webkit-box-pack: center;
+          justify-content: center;
   -webkit-box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
@@ -1037,12 +1045,6 @@
   }
 }
 
-
-
-
-
-
-
 /* Product Item css */
 
 .shopPage .product-item {
@@ -1056,27 +1058,7 @@
 .shopPage .product-item .product-header {
   height: 43%;
 }
-/* 
-.product-item .product-header .cart {
-  height: 60px;
-  width: 60px;
-  background-color: var(--green-color);
-  color: var(--white-100);
-  border: 1px solid var(--green-color);
-  overflow: hidden;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  right: 40px;
-  bottom: 20px;
-  cursor: pointer;
-} */
 
-/* .product-item .product-header .cart i {
-  font-size: 34px;
-} */
 
 .product-item .product-header .product-img {
   width: 100%;
@@ -1088,7 +1070,10 @@
 .product-item .product-header .product-img img {
   height: 100%;
   width: 100%;
-  object-fit: contain;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -webkit-transition: 0.3s ease;
+  -o-transition: 0.3s ease;
   transition: 0.3s ease;
   cursor: pointer;
   margin: 0 auto;
@@ -1117,10 +1102,16 @@
 }
 
 .product-item .price {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 5px;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .product-item .price .new-price {
@@ -1152,19 +1143,9 @@
   .product-item .product-header img {
     height: 60%;
     width: 60%;
-    object-fit: contain;
+    -o-object-fit: contain;
+       object-fit: contain;
   }
-
-  /* .product-item .product-header .cart {
-    height: 35px;
-    width: 35px;
-    right: 20px;
-    bottom: 20px;
-  }
-
-  .product-item .product-header .cart i {
-    font-size: 22px;
-  } */
 
   .product-item .product-details {
     padding: 8px 15px;
